--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="description">
           <div class="two-columns">
             <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-            <div class="two_columns__main-text">
+            <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
                 изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
@@ -127,14 +127,12 @@
               class="video__iframe"
               src="https://www.youtube.com/embed/arj7oStGLkU"
               title="YouTube video player"
-
               allowfullscreen
             ></iframe>
             <iframe
               class="video__iframe"
               src="https://www.youtube.com/embed/5MgBikgcWnY"
               title="YouTube video player"
-
               allowfullscreen
             ></iframe>
           </div>
@@ -142,7 +140,7 @@
         <section class="oakley">
           <div class="two-columns">
             <h3 class="two-columns__brief">История Барбары Оакли.</h3>
-            <div class="two_columns__main-text">
+            <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 С детства Барбаре не давалась математика. Она считала себя
                 законченным гуманитарием, причём далеко не самым умным. В армии
@@ -355,7 +353,7 @@
                 <li>
                   <a class="footer__column-link" href="#"
                     ><img
-                      class="footer__social_icon"
+                      class="footer__social-icon"
                       src="./images/facebook_color_white.svg"
                       alt="Логотип Facebook"
                     />Facebook</a
@@ -364,7 +362,7 @@
                 <li>
                   <a class="footer__column-link" href="#"
                     ><img
-                      class="footer__social_icon"
+                      class="footer__social-icon"
                       src="./images/vk_color_white.svg"
                       alt="Логотип ВКонтакте"
                     />ВКонтакте</a
@@ -373,7 +371,7 @@
                 <li>
                   <a class="footer__column-link" href="#"
                     ><img
-                      class="footer__social_icon"
+                      class="footer__social-icon"
                       src="./images/instagram_color_white.svg"
                       alt="Логотип Instagram"
                     />Instagram</a
